Fixed bug where form with errors was mis-aligned.

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -21,6 +21,13 @@ div.field, div.field input, div.field textarea {
   width:100%;
 }
 
+div.field input, div.field textarea {
+  width:100%;
+  display:block;
+  padding:0;
+  border-width:0;
+}
+
 div#day_time_field, div#date_field {
   width:49%;
   margin:inherit 0;
@@ -30,6 +37,17 @@ div#day_time_field {
   right:0;
   top:0;
   position:absolute;
+}
+
+.field br {
+  display:none;
+}
+
+div.field_with_errors {
+  width:100%;
+  /* black on red text is hard to read */
+  color:#FFF;
+  padding:0px;
 }
 
 #ui-datepicker-div {
